<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.gatech.seclass.glm.ListActivity">
    <item
        android:id="@+id/action_add_by_type"
        android:orderInCategory="200"
        android:title="@string/action_add_by_type"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="201"
        android:title="@string/action_search"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_deleteAll"
        android:orderInCategory="300"
        android:title="@string/action_deleteAll"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_selected"
        android:orderInCategory="400"
        android:title="@string/action_deleteSelected"
        app:showAsAction="never" />
</menu>
